DOC-1980: Convert all mentions of Transifex to Crowdin

--- a/modules/ROOT/partials/misc/using-community-lang-packs.adoc
+++ b/modules/ROOT/partials/misc/using-community-lang-packs.adoc
@@ -19,4 +19,4 @@ endif::[]
 
 NOTE: The language code set in the {productname} configuration must match the filename of the language file. If the language file is not found, {productname} will not load.
 
-If a language you need is not available, you may wish to translate it yourself. To contribute to translating {productname}, go to our https://www.transifex.com/projects/p/tinymce/[Transifex translation] page and sign up, then request to join a team or create a new team if your language are not listed.
+If a language you need is not available, you may wish to translate it yourself. To contribute to translating {productname}, go to our https://crowdin.com/project/tinymce[Crowdin translation] page and sign up, then request to join a team or create a new team if your language are not listed.
