--- a/modules/ROOT/partials/configuration/language.adoc
+++ b/modules/ROOT/partials/configuration/language.adoc
@@ -6,7 +6,7 @@ This option specifies the language used for the {productname} user interface, su
 Before changing the language option, ensure that the language pack is available to the {productname} instance. {companyname} provides two collections of language packs:
 
 * _Premium_ language packs — Professionally localized language packs provided on {cloudname} and bundled with premium self-hosted bundles.
-* _Community_ language packs - Localizations provided by {productname} users through Crowdin, which need to be downloaded prior to use, from link:{gettiny}/language-packages/[the {companyname} Downloads Page - Language Packages].
+* _Community_ language packs — Localizations provided by {productname} users through Crowdin. Community languages packs can be downloaded from link:{gettiny}/language-packages/[the {companyname} Community Language Packs downloads page].
 
 For information on:
 
