--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -71,7 +71,8 @@ For information on using premium skins and icon packs, see: xref:premium-skins-a
 
 {productname} 6.5 also includes the following bug fixes:
 
-=== Closing a dialog would scroll down the document in Safari. #TINY-9148
+=== Closing a dialog would scroll down the document in Safari. 
+//#TINY-9148
 
 In Safari, when closing a dialog, a bug caused the browser to select the a element and scroll down. As a consequence, the editor would scroll to the bottom after the dialog was closed.
 
