--- a/modules/ROOT/pages/template.adoc
+++ b/modules/ROOT/pages/template.adoc
@@ -5,6 +5,9 @@
 :pluginname: Template
 :plugincode: template
 
+
+IMPORTANT: The Template plugin has been marked as *deprecated*. It will be completely removed from the upcoming {productname} 7.0 release. As an alternative solution, we recommend the xref:advanced-templates.adoc[Advanced Template] Premium plugin.
+
 The `+template+` plugin adds support for custom templates. It also adds a menu item `+Insert template+` under the `+Insert+` menu and a toolbar button.
 
 == Basic setup
