--- a/modules/ROOT/pages/6.6.1-release-notes.adoc
+++ b/modules/ROOT/pages/6.6.1-release-notes.adoc
@@ -151,7 +151,7 @@ For information on using premium skins and icon packs, see: xref:premium-skins-a
 
 {productname} 6.6, introduced a new dialog configuration property, xref:dialog-configuration.adoc#border[`border`].
 
-When set to `true`, this property adds a border around `iframe` dialog components that highlights when the compoment takes focus. By default, {productname} renders this as a blue border around the component.
+When set to `true`, this property adds a border around `iframe` dialog components that highlights when the component takes focus. By default, {productname} renders this as a blue border around the component.
 
 When either Safari or Firefox were the host browsers, however, the border did not render as expected when this component had focus.
 
