--- a/modules/ROOT/pages/6.7-release-notes.adoc
+++ b/modules/ROOT/pages/6.7-release-notes.adoc
@@ -348,7 +348,7 @@ style="border: 3px solid red;"
 
 This constitutes un-announced and un-asked-for modification of the table’s underlying HTML within the {productname} editor.
 
-{productname} 6.7 addresses by immediately applying border style changes made using the *Table Properties* dialog using the shorthand format.
+{productname} 6.7 addresses this by immediately applying border style changes made using the *Table Properties* dialog using the shorthand format.
 
 Table HTML is, as a consequence, unaltered when it is reloaded into the {productname} editor.
 
